<resources>
    <string name="app_name">PJMG</string>
    <string name="title_activity_main">Main</string>

    <string name="login">Login</string>
    <string name="sign_up">Sign Up</string>
    <string name="submit">Submit</string>
    <string name="refill">Refill</string>
    <string name="user">Account</string>
    <string name="password">Password</string>
    <string name="email">E-Mail</string>

    <string name="menu_profile">Profile</string>
    <string name="menu_logout">Logout</string>

    <string name="drawer_open">Open</string>
    <string name="drawer_close">Close</string>

    <string-array name="tabs_name">
        <item>Most</item>
        <item>More</item>
        <item>Less</item>
        <item>Least</item>
    </string-array>

</resources>
